feat: implement email verification functionality and enhance registration process
- Added EmailVerificationService for managing email verification tokens and sending verification emails.
- Updated AuthController to include endpoints for email verification and resending verification emails.
- Enhanced AuthenticationService to handle email verification logic and update user status upon verification.
- Modified RegisterResponse to return userId instead of id for consistency.
- Updated SecurityConfig to allow access to the new email verification endpoint.
- Included spring-boot-starter-mail dependency in pom.xml for email functionalities.